[project]
name = "intro-to-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dataclasses==0.6",
    "langchain==1.2.0",
    "langchain-community==0.4.1",
    "langchain-mcp-adapters==0.2.1",
    "langchain-openai==1.1.6",
    "pydantic==2.12.5",
    "tavily==1.1.0",
]
